--- a/MagicalExoPlayer/app/src/main/res/values/strings.xml
+++ b/MagicalExoPlayer/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MagicalExoPlayer</string>
+    <string name="media_url_hls">https://bitdash-a.akamaihd.net/content/MI201109210084_1/m3u8s/f08e80da-bf1d-4e3d-8899-f0f6155f6efa.m3u8</string>
+
 </resources>
