--- a/MagicalExoPlayer/app/src/main/res/values/strings.xml
+++ b/MagicalExoPlayer/app/src/main/res/values/strings.xml
@@ -1,6 +1,21 @@
 <resources>
     <string name="app_name">MagicalExoPlayer</string>
-    <!--<string name="media_url_hls">https://bitdash-a.akamaihd.net/content/MI201109210084_1/m3u8s/f08e80da-bf1d-4e3d-8899-f0f6155f6efa.m3u8</string>-->
-    <string name="media_url_hls">https://player.vimeo.com/external/286837767.m3u8?s=42570e8c4a91b98cdec7e7bfdf0eccf54e700b69</string>
+    <string name="media_url_hls">https://bitdash-a.akamaihd.net/content/MI201109210084_1/m3u8s/f08e80da-bf1d-4e3d-8899-f0f6155f6efa.m3u8</string>
+    <string name="media_url_hls_1">https://player.vimeo.com/external/286837767.m3u8?s=42570e8c4a91b98cdec7e7bfdf0eccf54e700b69</string>
+    <string name="media_url_hls_2">https://player.vimeo.com/external/286837767.m3u8?s=42570e8c4a91b98cdec7e7bfdf0eccf54e700b69</string>
+    <string name="media_url_hls_3">https://player.vimeo.com/external/286837767.m3u8?s=42570e8c4a91b98cdec7e7bfdf0eccf54e700b69</string>
+    <string name="media_url_hls_4">https://player.vimeo.com/external/286837767.m3u8?s=42570e8c4a91b98cdec7e7bfdf0eccf54e700b69</string>
+    <string name="media_url_hls_5">https://player.vimeo.com/external/286837767.m3u8?s=42570e8c4a91b98cdec7e7bfdf0eccf54e700b69</string>
+    <string name="media_url_hls_6">https://player.vimeo.com/external/286837767.m3u8?s=42570e8c4a91b98cdec7e7bfdf0eccf54e700b69</string>
+
+
+    <string-array name="hls_videos_list">
+        <item>@string/media_url_hls</item>
+        <item>@string/media_url_hls</item>
+        <item>@string/media_url_hls</item>
+        <item>@string/media_url_hls</item>
+        <item>@string/media_url_hls</item>
+        <item>@string/media_url_hls</item>
+    </string-array>
 
 </resources>
